[package]
name = "corr-lib"
version = "0.0.18"
authors = ["ATM <naik.atmaram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
log = "0.4.11"
env_logger = "0.7.1"
chrono = { version = "0.4.13", features = ["serde"] }
regex = "1.3.9"
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
warp = "0.2.3"
async-trait = "0.1.36"
async-recursion = "0.3.1"
nom = "6.0.0-alpha1"
nom_locate = "2.0.0"
isahc = "0.9.8"

