[package]
name = "corr-lib"
version = "0.1.8"
authors = ["ATM <naik.atmaram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.11"
env_logger = "0.7.1"
chrono = { version = "0.4.13", features = ["serde"] }
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
futures = "0.3.5"
tokio = { version = "1.4.0", features = ["full"] }
warp = "0.3.1"
async-trait = "0.1.36"
async-recursion = "0.3.1"
nom = "6.0.0-alpha3"
nom_locate = "2.0.0"
#isahc = "0.9.8"
fake = "2.2.3"
mockito = "0.27.0"
base64 = "0.13.0"
rand = "0.7.3"
strfmt = "0.1.6"
hyper = { version = "0.14", features = ["full"] }
regex = "1.5.4"
captcha = "0.0.8"
#formdata = "0.13.0"
#multipart-async = "0.0.2"
multer = "2.0.1"
hyper-tls = "0.5.0"