[package]
name = "corr-lib"
version = "1.2.0"
authors = ["ATM <naik.atmaram@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
log = "0.4.11"
env_logger = "0.7.1"
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
futures = "0.3.17"
futures-util = "*"
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
tokio = { version = "1.24.2", features = ["full"] }
async-trait = "0.1.51"
async-recursion = "0.3.2"
nom = "7.0.0"
nom_locate = "4.0.0"
fake = "2.2.3"
mockito = "0.27.0"
base64 = "0.13.0"
rand = "0.7.3"
strfmt = "0.1.6"
hyper = { version = "0.14", features = ["full"] }
regex = "1.5.5"
captcha = "0.0.8"
multer = "2.0.1"
hyper-tls = "0.5.0"
num-traits = "0.2.14"
rdbc-async = { git = "https://github.com/qalens/rdbc-async" }
rdbc-async-postgres = { git = "https://github.com/qalens/rdbc-async" }
url = "2.2.2"
hound = "3.4.0"
serde_urlencoded = "0.7.1"
influxdb2 ="0.1.0"
anyhow = "1.0.58"