[package]
name = "corr"
version = "0.0.5"
authors = ["ATM <naik.atmaram@gmail.com>"]
description = "A cross platform client for correlated journeys"
license = "MIT"
repository = "https://github.com/atmaramnaik/corr"
readme = "README.md"
documentation = "https://docs.rs/corr_client"
keywords = ["api", "data", "testing", "adhoc", "creation"]
categories = ["api"]
edition = "2018"
autoexamples = false

[dependencies]
clap = "2.33.0"
corr_client_lib={path="../lib/corr_client_lib"}
app_dirs2 = "2"