[package]
name = "corr"
version = "0.2.0"
authors = ["Atmaram Naik <naik.atmaram@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
log = "0.4.11"
env_logger = "0.7.1"
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.3.9"
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
futures = "0.3.17"
tokio = { version = "1.12.0", features = ["full"] }
async-trait = "0.1.51"
async-recursion = "0.3.2"
corr-lib={path="../corr-lib"}
app_dirs2 =  "2.3.0"
flate2 = "1.0.20"
tar = "0.4.33"
toml = "0.5.8"
async-std = "1.9.0"
nom = "7.0.0"
