[package]
name = "corrs"
version = "0.2.0"
authors = ["Atmaram Naik <naik.atmaram@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
log = "0.4.11"
env_logger = "0.7.1"
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.3.9"
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
futures = "0.3.17"
tokio = { version = "1.12.0", features = ["full"] }
warp = "0.3.1"
async-trait = "0.1.51"
async-recursion = "0.3.2"
corr-lib={path="../corr-lib"}
clap = "3.0.0-beta.4"
toml = "0.5.8"
app_dirs2 =  "2.3.0"
tokio-stream = "0.1.7"
