[package]
name = "playground"
version = "1.2.0"
authors = ["Atmaram Naik <naik.atmaram@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
async-trait = "0.1.36"
futures = "0.3.17"
futures-util = "*"
tokio-tungstenite = "*"

async-recursion = "0.3.1"
rdbc-async = { git = "https://github.com/qalens/rdbc-async" }
rdbc-async-postgres = { git = "https://github.com/qalens/rdbc-async" }
corr-lib={path="../corr-lib"}
url = "2.2.2"
