[package]
name = "corr_client_lib"
version = "0.1.0"
authors = ["ATM <naik.atmaram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking","json"] }
tokio = { version = "0.2", features = ["full"] }
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
corr_core={path="../corr_core"}
corr_websocket={path="../corr_websocket"}
websocket ="0.24.0"
futures = "0.3.4"
serde_json= "1.0.48"