[package]
name = "corr_journeys_builder"
version = "0.1.0"
authors = ["ATM <naik.atmaram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corr_core={path="../corr_core"}
corr_templates={path="../corr_templates"}
corr_rest={path="../corr_rest"}
corr_journeys={path="../corr_journeys"}
nom = "5.1.0"