[package]
name = "corr_postgres"
version = "0.1.0"
authors = ["ATM <naik.atmaram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corr_core={path="../corr_core"}
corr_templates={path="../corr_templates"}
corr_journeys={path="../corr_journeys"}
tokio = {version = "0.2.4", features=["macros"]}
postgres = "0.17.3"
tokio-postgres = "0.5.4"