[package]
name = "corr_server_lib"
version = "0.1.0"
authors = ["ATM <naik.atmaram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2"}
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json= "1.0.48"
uuid = { version = "0.8", features = ["serde", "v4"] }
corr_core={path="../corr_core"}
corr_templates={path="../corr_templates"}
corr_journeys={path="../corr_journeys"}
corr_journeys_builder={path="../corr_journeys_builder"}
corr_websocket={path="../corr_websocket"}
corr_rest={path="../corr_rest"}

websocket ="0.24.0"
futures = "0.1.4"
tokio = {version = "0.1.22"}
app_dirs2 = "2"