[package]
name = "corr_templates"
version = "0.1.0"
authors = ["ATM <naik.atmaram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corr_core={path="../corr_core"}
nom = "5.1.0"
serde = "1.0.104"
serde_json = "1.0.45"
lazy_static = "1.4.0"
uuid = "0.8.1"
rand="0.7.3"